--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@types/bun": "latest",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/pg": "^8.15.6",
     "drizzle-kit": "^0.31.7",
     "typescript": "^5.9.3"
@@ -23,6 +24,7 @@
     "@hono/zod-validator": "^0.7.5",
     "drizzle-orm": "^0.44.7",
     "hono": "^4.10.6",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.3",
     "vite": "^7.2.4",
     "zod": "^4.1.12"
