--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "hono": "^4.10.6",
     "ioredis": "^5.8.2",
+    "jsonwebtoken": "^9.0.2",
     "zod": "^3.25.76"
   },
   "devDependencies": {
