--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "hono": "^4.10.6",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.3",
+    "prom-client": "^15.1.3",
     "vite": "^7.2.4",
     "zod": "^4.1.12"
   }
