--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -15,6 +15,9 @@ jobs:
       campaign: ${{ steps.filter.outputs.campaign }}
       pledge: ${{ steps.filter.outputs.pledge }}
       payment: ${{ steps.filter.outputs.payment }}
+      bank: ${{ steps.filter.outputs.bank }}
+      notification: ${{ steps.filter.outputs.notification }}
+      chat: ${{ steps.filter.outputs.chat }}
       gateway: ${{ steps.filter.outputs.gateway }}
       web: ${{ steps.filter.outputs.web }}
       packages: ${{ steps.filter.outputs.packages }}
@@ -36,6 +39,15 @@ jobs:
               - 'packages/**'
             payment:
               - 'apps/payment/**'
+              - 'packages/**'
+            bank:
+              - 'apps/bank/**'
+              - 'packages/**'
+            notification:
+              - 'apps/notification/**'
+              - 'packages/**'
+            chat:
+              - 'apps/chat/**'
               - 'packages/**'
             gateway:
               - 'apps/gateway/**'
@@ -69,7 +81,7 @@ jobs:
     needs: detect-changes
     strategy:
       matrix:
-        service: [auth, campaign, pledge, payment, gateway]
+        service: [auth, campaign, pledge, payment, bank, notification, chat, gateway]
     if: needs.detect-changes.outputs[matrix.service] == 'true'
     steps:
       - uses: actions/checkout@v4
@@ -107,12 +119,19 @@ jobs:
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     strategy:
       matrix:
-        service: [auth, campaign, pledge, gateway, payment, web]
+        service: [auth, campaign, pledge, gateway, payment, bank, notification, chat, web]
     steps:
       - uses: actions/checkout@v4
       
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       
       - name: Generate version tag
         id: version
@@ -120,56 +139,21 @@ jobs:
           SHORT_SHA=$(git rev-parse --short HEAD)
           echo "tag=v1.0.${{ github.run_number }}-${SHORT_SHA}" >> $GITHUB_OUTPUT
       
-      - name: Build Docker image for ${{ matrix.service }}
+      - name: Build and push Docker image for ${{ matrix.service }}
         uses: docker/build-push-action@v5
         with:
           context: .
-          push: false
+          push: true
           tags: |
-            careforall-${{ matrix.service }}:${{ steps.version.outputs.tag }}
-            careforall-${{ matrix.service }}:latest
+            ghcr.io/${{ github.repository_owner }}/careforall-${{ matrix.service }}:${{ steps.version.outputs.tag }}
+            ghcr.io/${{ github.repository_owner }}/careforall-${{ matrix.service }}:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-  integration-test:
-    name: Integration Test
+  system-test:
+    name: System E2E Tests
     runs-on: ubuntu-latest
     needs: [lint, test-packages]
-    services:
-      postgres:
-        image: postgres:16-alpine
-        env:
-          POSTGRES_USER: user
-          POSTGRES_PASSWORD: password
-          POSTGRES_DB: careforall
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-        ports:
-          - 5432:5432
-      
-      redis:
-        image: redis:7-alpine
-        options: >-
-          --health-cmd "redis-cli ping"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-        ports:
-          - 6379:6379
-      
-      nats:
-        image: nats:2.10-alpine
-        options: >-
-          --health-cmd "wget --spider http://localhost:8222/healthz"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-        ports:
-          - 4222:4222
-    
     steps:
       - uses: actions/checkout@v4
       
@@ -179,15 +163,17 @@ jobs:
       
       - name: Install dependencies
         run: bun install
-      
-      - name: Setup database
-        run: bun run db:push
-        env:
-          DATABASE_URL: postgres://user:password@localhost:5432/careforall
-      
-      - name: Run integration tests
-        run: bun test --timeout 30000
-        env:
-          DATABASE_URL: postgres://user:password@localhost:5432/careforall
-          REDIS_URL: redis://localhost:6379
-          NATS_URL: nats://localhost:4222
+
+      - name: Start services
+        run: docker compose up -d --build
+
+      - name: Wait for services
+        run: sleep 30
+
+      - name: Run E2E Tests
+        run: ./test-all-services.sh
+        
+      - name: Dump logs on failure
+        if: failure()
+        run: docker compose logs
+
