--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -4,9 +4,13 @@
   "main": "src/index.ts",
   "scripts": {
     "generate": "drizzle-kit generate",
-    "push": "drizzle-kit push"
+    "push": "drizzle-kit push",
+    "push:app": "drizzle-kit push --config=drizzle.app.config.ts",
+    "push:bank": "drizzle-kit push --config=drizzle.bank.config.ts"
   },
   "dependencies": {
+    "@types/bcryptjs": "^3.0.0",
+    "bcryptjs": "^3.0.3",
     "drizzle-orm": "^0.44.7",
     "postgres": "^3.4.7"
   },
