--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -113,13 +113,16 @@ jobs:
         run: bun run tsc --noEmit
 
   build-docker:
-    name: Build Docker Images
+    name: Build & Push Docker Images
     runs-on: ubuntu-latest
     needs: [test-packages, test-services, lint]
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     strategy:
       matrix:
         service: [auth, campaign, pledge, gateway, payment, bank, notification, chat, web]
+    permissions:
+      contents: read
+      packages: write
     steps:
       - uses: actions/checkout@v4
       
@@ -133,22 +136,54 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
       
-      - name: Generate version tag
-        id: version
+      - name: Get version from package.json
+        id: package-version
         run: |
-          SHORT_SHA=$(git rev-parse --short HEAD)
-          echo "tag=v1.0.${{ github.run_number }}-${SHORT_SHA}" >> $GITHUB_OUTPUT
+          VERSION=$(jq -r .version apps/${{ matrix.service }}/package.json)
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
       
+      - name: Generate build tags
+        id: tags
+        run: |
+          VERSION=${{ steps.package-version.outputs.version }}
+          SHA=$(git rev-parse --short HEAD)
+          echo "tags=ghcr.io/${{ github.repository_owner }}/careforall-${{ matrix.service }}:${VERSION},ghcr.io/${{ github.repository_owner }}/careforall-${{ matrix.service }}:${VERSION}-${SHA},ghcr.io/${{ github.repository_owner }}/careforall-${{ matrix.service }}:latest" >> $GITHUB_OUTPUT
+
       - name: Build and push Docker image for ${{ matrix.service }}
         uses: docker/build-push-action@v5
         with:
           context: .
+          file: Dockerfile
           push: true
-          tags: |
-            ghcr.io/${{ github.repository_owner }}/careforall-${{ matrix.service }}:${{ steps.version.outputs.tag }}
-            ghcr.io/${{ github.repository_owner }}/careforall-${{ matrix.service }}:latest
+          tags: ${{ steps.tags.outputs.tags }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+          build-args: |
+            SERVICE_NAME=${{ matrix.service }}
+
+  deploy-bonus:
+    name: Bonus - Automated Deployment
+    runs-on: ubuntu-latest
+    needs: build-docker
+    if: github.ref == 'refs/heads/main'
+    steps:
+      - uses: actions/checkout@v4
+      
+      - name: Deploy System (Simulated)
+        run: |
+          echo "🚀 Starting automated deployment..."
+          docker compose up -d --build
+          
+      - name: Health Check
+        run: |
+          echo "Waiting for services to initialize..."
+          sleep 30
+          docker compose ps
+          
+          echo "Checking Gateway Health..."
+          curl -f http://localhost:8080/health || exit 1
+          
+          echo "✅ Deployment Successful!"
 
   system-test:
     name: System E2E Tests
