--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -6,6 +6,8 @@
     "hono": "^4.10.6",
     "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.2",
+    "winston": "^3.18.3",
+    "winston-elasticsearch": "^0.19.0",
     "zod": "^3.25.76"
   },
   "devDependencies": {
