--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -105,26 +105,11 @@ jobs:
       - name: Run tests for ${{ matrix.service }}
         run: bun test apps/${{ matrix.service }}/
 
-  lint:
-    name: Lint & Type Check
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      
-      - uses: oven-sh/setup-bun@v1
-        with:
-          bun-version: latest
-      
-      - name: Install dependencies
-        run: bun install
-      
-      - name: Type check
-        run: bun run tsc --noEmit
 
   build-docker:
     name: Build & Push Docker Images
     runs-on: ubuntu-latest
-    needs: [test-packages, test-services, lint]
+    needs: [test-packages, test-services]
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     strategy:
       matrix:
@@ -197,7 +182,7 @@ jobs:
   system-test:
     name: System E2E Tests
     runs-on: ubuntu-latest
-    needs: [lint, test-packages]
+    needs: [test-packages]
     steps:
       - uses: actions/checkout@v4
       
